infra/base/kordis-spa-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kordis-spa
spec:
  replicas: 1
  selector:
    matchLabels:
      serverpod: kordis-spa
  template:
    metadata:
      labels:
        serverpod: kordis-spa
    spec:
      automountServiceAccountToken: false
      containers:
        - name: kordis-spa
          image: kordis-spa:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 256Mi
              cpu: 200m
            requests:
              memory: 128Mi
              cpu: 100m
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
          volumeMounts:
            - name: secrets
              mountPath: '/mnt/secrets'
              readOnly: true
      volumes:
        - name: secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: azure-vault-secrets
            nodePublishSecretRef:
              name: azure-vault-creds
