infra/base/kordis-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kordis-api
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    serverpod: kordis-api
