infra/base/kordis-spa-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kordis-spa
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    serverpod: kordis-spa
