infra/base/kordis-api-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kordis-api
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
    traefik.ingress.kubernetes.io/router.tls.certResolver: default
spec:
  rules:
    - host: KUSTOMIZE_ME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kordis-api
                port:
                  name: http
